<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Puzzled Love</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_levels">LevelsActivity</string>
    <string name="levelsTitle">Game Levels!!</string>
    <string name="title_activity_tic_tac_toe">TicTacToe</string>
    <string name="tic_tac_toe_title">Tic-Tac-Beau</string>
    <string name="buttonText_ticTacToe0"></string>
    <string name="buttonText_ticTacToe1"></string>
    <string name="buttonText_ticTacToe2"></string>
    <string name="buttonText_ticTacToe3"></string>
    <string name="buttonText_ticTacToe4"></string>
    <string name="buttonText_ticTacToe5"></string>
    <string name="buttonText_ticTacToe6"></string>
    <string name="buttonText_ticTacToe7"></string>
    <string name="buttonText_ticTacToe8"></string>
    <string name="buttonText_ticTacToeReset">Reset Game</string>
    <string name="GameSubTitle_TicTacToe">Tic Tac Beau</string>
    <string name="GameSubTitle_Hangman">Break My Heart</string>
    <string name="title_activity_hangman">Hangman</string>
    <string name="hangman_title">Break My Heart</string>
    <string name="questionText">Question</string>
    <string name="guessProgress"></string>
    <string name="guessButtonLabel">Guess</string>
    <string name="title_activity_tic_tac_toe_media">TicTacToeMedia</string>
    <string name="title_activity_hangman_media">HangmanMedia</string>

</resources>
