<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.madcowscientist.puzzledlove.LevelsActivity$PlaceholderFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/levelsTitle"
        android:id="@+id/textView_levelsTitle"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:textColor="#ffff53b7"
        android:textIsSelectable="true"
        android:textSize="50sp" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_goToTicTacToe"
        android:onClick="goToTicTacToe"
        android:src="@drawable/unlock"
        android:layout_below="@+id/textView_levelsTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="37dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/GameSubTitle_TicTacToe"
        android:id="@+id/textView"
        android:layout_alignLeft="@+id/textView_levelsTitle"
        android:layout_alignStart="@+id/textView_levelsTitle"
        android:textSize="30sp"
        android:layout_alignTop="@+id/button_goToTicTacToe"
        android:layout_alignBottom="@+id/button_goToTicTacToe"
        android:layout_toLeftOf="@+id/button_goToTicTacToe"
        android:layout_toStartOf="@+id/button_goToTicTacToe" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_goToTicTacToeMedia"
        android:onClick="goToTicTacToe"
        android:src="@drawable/play"
        android:layout_alignTop="@+id/button_goToTicTacToe"
        android:layout_toRightOf="@+id/button_goToTicTacToe"
        android:layout_alignBottom="@+id/button_goToTicTacToe"
        android:layout_alignRight="@+id/button_goToHangmanMedia"
        android:layout_alignEnd="@+id/button_goToHangmanMedia" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/GameSubTitle_Hangman"
        android:id="@+id/textView2"
        android:textSize="30sp"
        android:layout_below="@+id/button_goToTicTacToe"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:layout_marginTop="42dp"
        android:layout_toLeftOf="@+id/button_goToTicTacToe"
        android:layout_toStartOf="@+id/button_goToTicTacToe" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_goToHangman"
        android:onClick="goToTicTacToe"
        android:src="@drawable/lock"
        android:layout_alignTop="@+id/textView2"
        android:layout_toRightOf="@+id/textView2"
        android:layout_toEndOf="@+id/textView2" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_goToHangmanMedia"
        android:onClick="goToTicTacToe"
        android:src="@drawable/play"
        android:layout_alignTop="@+id/button_goToHangman"
        android:layout_toRightOf="@+id/button_goToHangman"
        android:layout_toEndOf="@+id/button_goToHangman"
        android:layout_alignBottom="@+id/button_goToHangman" />
</RelativeLayout>